--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,18 @@
 .externalNativeBuild
 .cxx
 local.properties
+# BMAD and Kiro related files
+.bmad-core/
+.kiro/
+docs/
+
+# Configuration files with sensitive data (API keys, secrets, etc.)
+google-services.json
+app/google-services.json
+config.properties
+secrets.properties
+api-keys.properties
+.env
+.env.local
+*.key
+*.secret
